all featured projects

--- a/app/mailers/suggest_packages_email.html.erb
+++ b/app/mailers/suggest_packages_email.html.erb
@@ -682,14 +682,14 @@ body.outlook img {
                         <tr>
                           <td>
                             <h3>Hello <%= @fullname %>,</h3>
-                						<p class="lead">we noticed you signed up for VersionEye.com but didn't follow any libraries yet.</p>
+                            <p class="lead">we noticed you signed up for VersionEye.com but didn't follow any libraries yet.</p>
                             <h3>What is VersionEye?</h3>
                             <p class="lead">
                               VersionEye is a tool for developers that tracks software libraries for programming languages like Java, PHP, Ruby or Python and notifies
                               you whenever a new version of that library is released. This also works automatically with popular package managers like Maven, Bundler or NPM.
                             </p>
 
-                						<!-- <img width="580" height="300" src="http://placehold.it/580x300"> -->
+                            <!-- <img width="580" height="300" src="http://placehold.it/580x300"> -->
 
                           </td>
                           <td class="expander"></td>
@@ -715,11 +715,11 @@ body.outlook img {
                             <!-- Top Right sub-grid -->
                             <h5>Rails (4.0.2)</h5>
                             <p>The latest version of the popular Rails framework was released on December 3, 2013. If you are still using Rails 3, v3.2.16 was released the same day. Both versions fix a range of
-                            <a href="http://weblog.rubyonrails.org/2013/12/3/Rails_3_2_16_and_4_0_2_have_been_released/">security issues</a>.
+                              <a href="http://weblog.rubyonrails.org/2013/12/3/Rails_3_2_16_and_4_0_2_have_been_released/">security issues</a>.
                             </p>
 
                             <!-- custom wrapped button -->
-                            <table width="150">
+                            <table class="five">
                               <tr>
                                 <td>
 
@@ -728,6 +728,149 @@ body.outlook img {
                                       <tr>
                                         <td>
                                           Follow Rails &raquo;
+                                        </td>
+                                      </tr>
+                                    </table>
+                                  </a>
+
+                                </td>
+                              </tr>
+                            </table>
+
+                          </td>
+                          <td class="expander"></td>
+                        </tr>
+                      </table>
+                      <table class="twelve columns">
+                        <tr>
+                          <td class="three sub-columns">
+                            <!-- Top Left sub-grid -->
+                            <img width="110" height="110" src="https://www.versioneye.com/assets/language/ruby.png">
+                          </td>
+                          <td class="nine sub-columns last">
+                            <!-- Top Right sub-grid -->
+                            <h5>Nokogiri (1.6.1)</h5>
+                            <p>Nokogiri 1.6.1 is a parsing library for Ruby. This version was released on Dec 14, 2013 and version 1.6.2 seems to be already in the pipeline. Both releases feature some bugfixes.
+                            </p>
+
+                            <!-- custom wrapped button -->
+                            <table class="five">
+                              <tr>
+                                <td>
+
+                                  <a class="button" href="https://www.versioneye.com/ruby/nokogiri">
+                                    <table>
+                                      <tr>
+                                        <td>
+                                          Follow Nokogiri &raquo;
+                                        </td>
+                                      </tr>
+                                    </table>
+                                  </a>
+
+                                </td>
+                              </tr>
+                            </table>
+
+                          </td>
+                          <td class="expander"></td>
+                        </tr>
+                      </table>
+
+                      <table class="twelve columns">
+                       <tr>
+                         <td class="three sub-columns">
+                           <!-- Top Left sub-grid -->
+                           <img width="110" height="110" src="https://www.versioneye.com/assets/language/python.png">
+                         </td>
+                         <td class="nine sub-columns last">
+                           <!-- Top Right sub-grid -->
+                           <h5>Django (1.6.1)</h5>
+                           <p>Django 1.6.1 is the most popular Python framework and the developers just released a new version on Dec 12, 2013. These are the <a href="https://docs.djangoproject.com/en/1.6/releases/1.6.1/">release notes.</a>
+                           </p>
+
+                           <!-- custom wrapped button -->
+                           <table class="five">
+                             <tr>
+                               <td>
+
+                                 <a class="button" href="https://www.versioneye.com/python/Django">
+                                   <table>
+                                     <tr>
+                                       <td>
+                                         Follow Django &raquo;
+                                       </td>
+                                     </tr>
+                                   </table>
+                                 </a>
+
+                               </td>
+                             </tr>
+                           </table>
+
+                         </td>
+                         <td class="expander"></td>
+                       </tr>
+                     </table>
+
+
+                     <table class="twelve columns">
+                       <tr>
+                         <td class="three sub-columns">
+                           <!-- Top Left sub-grid -->
+                           <img width="110" height="110" src="https://www.versioneye.com/assets/language/nodejs.png">
+                         </td>
+                         <td class="nine sub-columns last">
+                           <!-- Top Right sub-grid -->
+                           <h5>Request (2.30.0)</h5>
+                           <p>If you work with Nodejs and do HTTP requests, you certainly have worked with Request. The current version 2.30.0 is out since Dec 14, 2013. These are the <a href="https://docs.djangoproject.com/en/1.6/releases/1.6.1/">release notes.</a>
+                           </p>
+
+                           <!-- custom wrapped button -->
+                           <table class="five">
+                             <tr>
+                               <td>
+
+                                 <a class="button" href="https://www.versioneye.com/nodejs/request">
+                                   <table>
+                                     <tr>
+                                       <td>
+                                         Follow Request &raquo;
+                                       </td>
+                                     </tr>
+                                   </table>
+                                 </a>
+
+                               </td>
+                             </tr>
+                           </table>
+
+                         </td>
+                         <td class="expander"></td>
+                       </tr>
+                     </table>
+
+                     <table class="twelve columns">
+                      <tr>
+                        <td class="three sub-columns">
+                          <!-- Top Left sub-grid -->
+                          <img width="110" height="110" src="https://www.versioneye.com/assets/language/php.png">
+                        </td>
+                        <td class="nine sub-columns last">
+                          <!-- Top Right sub-grid -->
+                          <h5>Symfony (2.4.0 / 2.3.8)</h5>
+                          <p>Symfony had a both a first stable version of 2.4 and a bugfix release for 2.3 out in december. See the <a href="http://symfony.com/blog/symfony-2-4-0-released">blogpost for 2.4.0</a> and the <a href="http://symfony.com/blog/symfony-2-3-8-released">blog post for 2.3.8</a>.
+
+                            <!-- custom wrapped button -->
+                            <table class="five">
+                              <tr>
+                                <td>
+
+                                  <a class="button" href="https://www.versioneye.com/php/symfony:symfony">
+                                    <table>
+                                      <tr>
+                                        <td>
+                                          Follow Symfony &raquo;
                                         </td>
                                       </tr>
                                     </table>
@@ -754,11 +897,11 @@ body.outlook img {
                             <p>The latest Version of Zend Framework was released on October 31, 2013. The <a href="http://framework.zend.com/blog/zend-framework-2-2-5-released.html">relase notes</a> also mention security issues.</p>
 
                             <!-- custom wrapped button -->
-                            <table width="150">
+                            <table class="five">
                               <tr>
                                 <td>
 
-                                  <a class="button" href="#">
+                                  <a class="button" href="https://www.versioneye.com/php/zendframework:zendframework">
                                     <table>
                                       <tr>
                                         <td>
@@ -777,9 +920,154 @@ body.outlook img {
                         </tr>
                       </table>
 
+                      <table class="twelve columns">
+                        <tr>
+                          <td class="three sub-columns">
+                            <!-- Top Left sub-grid -->
+                            <img width="110" height="110" src="https://www.versioneye.com/assets/language/php.png">
+                          </td>
+                          <td class="nine sub-columns last">
+                            <!-- Top Right sub-grid -->
+                            <h5>Hibernate (4.2.7.SP1)</h5>
+                            <p>Hibernate released a bugfix for date handling on Oct 23, 2013. Here are the <a href="http://planet.jboss.org/post/hibernate_orm_4_2_7_sp1_released">release notes</a>.
+                              Also 4.3.0 is coming up and the Hibernate team already published a release candidate with the version 4.3.0.CR1
+                            </p>
+
+                            <!-- custom wrapped button -->
+                            <table class="five">
+                              <tr>
+                                <td>
+
+                                  <a class="button" href="https://www.versioneye.com/java/org.springframework:spring-core">
+                                    <table>
+                                      <tr>
+                                        <td>
+                                          Follow Hibern &raquo;
+                                        </td>
+                                      </tr>
+                                    </table>
+                                  </a>
+
+                                </td>
+                              </tr>
+                            </table>
+
+                          </td>
+                          <td class="expander"></td>
+                        </tr>
+                      </table>
+                      <table class="twelve columns">
+                        <tr>
+                          <td class="three sub-columns">
+                            <!-- Top Left sub-grid -->
+                            <img width="110" height="110" src="https://www.versioneye.com/assets/language/php.png">
+                          </td>
+                          <td class="nine sub-columns last">
+                            <!-- Top Right sub-grid -->
+                            <h5>Spring (3.2.5)</h5>
+                            <p>Spring-Core had a release mid november this year. The <a href="https://spring.io/blog/2013/11/07/spring-framework-3-2-5-released">blog post</a> says, this relase contains more than 50 bug fixes and improvements.
+                            </p>
+
+                            <!-- custom wrapped button -->
+                            <table class="five">
+                              <tr>
+                                <td>
+
+                                  <a class="button" href="https://www.versioneye.com/java/org.springframework:spring-core">
+                                    <table>
+                                      <tr>
+                                        <td>
+                                          Follow Spring-Core &raquo;
+                                        </td>
+                                      </tr>
+                                    </table>
+                                  </a>
+
+                                </td>
+                              </tr>
+                            </table>
+
+                          </td>
+                          <td class="expander"></td>
+                        </tr>
+                      </table>
+
+                      <table class="twelve columns">
+                        <tr>
+                          <td class="three sub-columns">
+                            <!-- Top Left sub-grid -->
+                            <img width="110" height="110" src="https://www.versioneye.com/assets/language/clojure.png">
+                          </td>
+                          <td class="nine sub-columns last">
+                            <!-- Top Right sub-grid -->
+                            <h5>Storm (0.9.0.1)</h5>
+                            <p>Storm is a distributed, fault-tolerant, and high-performance realtime computation system that provides strong guarantees on the processing of data. This release simply fixes binary compatibility with Java 1.6. There are no functional changes. Version 0.9.1 will be the first Apache incubator release.
+                            </p>
+
+                            <!-- custom wrapped button -->
+                            <table class="five">
+                              <tr>
+                                <td>
+
+                                  <a class="button" href="https://www.versioneye.com/clojure/storm:storm">
+                                    <table>
+                                      <tr>
+                                        <td>
+                                          Follow Storm &raquo;
+                                        </td>
+                                      </tr>
+                                    </table>
+                                  </a>
+
+                                </td>
+                              </tr>
+                            </table>
+
+                          </td>
+                          <td class="expander"></td>
+                        </tr>
+                      </table>
+
+                      <table class="twelve columns">
+                        <tr>
+                          <td class="three sub-columns">
+                            <!-- Top Left sub-grid -->
+                            <img width="110" height="110" src="https://www.versioneye.com/assets/language/objective-c.png">
+                          </td>
+                          <td class="nine sub-columns last">
+                            <!-- Top Right sub-grid -->
+                            <h5>AFNetworking (2.0.3)</h5>
+                            <p>The latest version of the popular networking library AFNetworking was release mid November and fixes some bugs.
+                            </p>
+
+                            <!-- custom wrapped button -->
+                            <table class="five">
+                              <tr>
+                                <td>
+
+                                  <a class="button" href="https://www.versioneye.com/objective-c/afnetworking">
+                                    <table>
+                                      <tr>
+                                        <td>
+                                          Follow AFNetworking &raquo;
+                                        </td>
+                                      </tr>
+                                    </table>
+                                  </a>
+
+                                </td>
+                              </tr>
+                            </table>
+
+                          </td>
+                          <td class="expander"></td>
+                        </tr>
+                      </table>
+
                     </td>
                   </tr>
                 </table>
+
 
                 <!-- Panel with call to action -->
                 <table class="row  callout">
@@ -816,7 +1104,7 @@ body.outlook img {
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 
                             <!-- custom wrapped button -->
-                            <table width="150">
+                            <table class="five">
                               <tr>
                                 <td>
 
@@ -851,7 +1139,7 @@ body.outlook img {
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 
                             <!-- custom wrapped button -->
-                            <table width="150">
+                            <table class="five">
                               <tr>
                                 <td>
 
@@ -967,14 +1255,14 @@ body.outlook img {
                   </tr>
                 </table>
 
-              <!-- container end below -->
+                <!-- container end below -->
               </td>
             </tr>
           </table>
 
         </center>
-			</td>
-		</tr>
-	</table>
+      </td>
+    </tr>
+  </table>
 </body>
 </html>
