Change Table header of dependency and license view

--- a/app/views/shared/_product_license_table.html.erb
+++ b/app/views/shared/_product_license_table.html.erb
@@ -3,7 +3,7 @@
 <table class="dependency_table" style="width: <%= width %>px;">
   <thead>
     <tr>
-      <th width="200px" ></th>
+      <th width="200px">Dependency</th>
       <th >License</th>
     </tr>
   </thead>
