--- a/app/views/user/projects/_project_dependency_table.html.erb
+++ b/app/views/user/projects/_project_dependency_table.html.erb
@@ -5,7 +5,7 @@
         <th style= "width: 1em;">&nbsp;</th>
         <th class="version_col">Current</th>
         <th class="version_col">Locked</th>
-        <th class="name_col_after_icon">Product</th>
+        <th class="name_col_after_icon">Dependency</th>
         <th class= "">&nbsp;</th>
       </tr>
     </thead>
