--- a/app/mailers/suggest_packages_email.html.erb
+++ b/app/mailers/suggest_packages_email.html.erb
@@ -583,7 +583,7 @@ body.outlook img {
     }
 
     .template-label {
-      color: #ffffff;
+      color: #666666;
       font-weight: bold;
       font-size: 11px;
     }
@@ -594,7 +594,7 @@ body.outlook img {
     }
 
     .header {
-      background: #ddffdd;
+      background: #f3f3f3;
     }
 
     .footer .wrapper {
@@ -649,7 +649,7 @@ body.outlook img {
                         <table class="twelve columns">
                           <tr>
                             <td class="six sub-columns">
-                              <img src="https://www.versioneye.com/assets/logos/versioneye-transparent-2494db513158178b56313616264e74ab.png">
+                              <img src="https://www.versioneye.com/assets/logos/versioneye-transparent-2494db513158178b56313616264e74ab.png" alt="VersionEye">
                             </td>
                             <td class="six sub-columns last" style="text-align:right; vertical-align:middle;">
                               <span class="template-label">NEWSLETTER</span>
@@ -709,7 +709,7 @@ body.outlook img {
                         <tr>
                           <td class="three sub-columns">
                             <!-- Top Left sub-grid -->
-                            <img width="110" height="110" src="https://www.versioneye.com/assets/language/ruby.png">
+                            <img width="110" height="110" src="https://www.versioneye.com/assets/language/ruby.png" alt="Ruby">
                           </td>
                           <td class="nine sub-columns last">
                             <!-- Top Right sub-grid -->
@@ -745,7 +745,7 @@ body.outlook img {
                         <tr>
                           <td class="three sub-columns">
                             <!-- Top Left sub-grid -->
-                            <img width="110" height="110" src="https://www.versioneye.com/assets/language/ruby.png">
+                            <img width="110" height="110" src="https://www.versioneye.com/assets/language/ruby.png" alt="Ruby">
                           </td>
                           <td class="nine sub-columns last">
                             <!-- Top Right sub-grid -->
@@ -781,7 +781,7 @@ body.outlook img {
                        <tr>
                          <td class="three sub-columns">
                            <!-- Top Left sub-grid -->
-                           <img width="110" height="110" src="https://www.versioneye.com/assets/language/python.png">
+                           <img width="110" height="110" src="https://www.versioneye.com/assets/language/python.png" alt="Python">
                          </td>
                          <td class="nine sub-columns last">
                            <!-- Top Right sub-grid -->
@@ -818,7 +818,7 @@ body.outlook img {
                        <tr>
                          <td class="three sub-columns">
                            <!-- Top Left sub-grid -->
-                           <img width="110" height="110" src="https://www.versioneye.com/assets/language/nodejs.png">
+                           <img width="110" height="110" src="https://www.versioneye.com/assets/language/nodejs.png" alt="Node.js">
                          </td>
                          <td class="nine sub-columns last">
                            <!-- Top Right sub-grid -->
@@ -854,7 +854,7 @@ body.outlook img {
                       <tr>
                         <td class="three sub-columns">
                           <!-- Top Left sub-grid -->
-                          <img width="110" height="110" src="https://www.versioneye.com/assets/language/php.png">
+                          <img width="110" height="110" src="https://www.versioneye.com/assets/language/php.png" alt="PHP">
                         </td>
                         <td class="nine sub-columns last">
                           <!-- Top Right sub-grid -->
@@ -889,7 +889,7 @@ body.outlook img {
                         <tr>
                           <td class="three sub-columns">
                             <!-- Top Left sub-grid -->
-                            <img width="110" height="110" src="https://www.versioneye.com/assets/language/php.png">
+                            <img width="110" height="110" src="https://www.versioneye.com/assets/language/php.png" alt="PHP">
                           </td>
                           <td class="nine sub-columns last">
                             <!-- Top Right sub-grid -->
@@ -924,7 +924,7 @@ body.outlook img {
                         <tr>
                           <td class="three sub-columns">
                             <!-- Top Left sub-grid -->
-                            <img width="110" height="110" src="https://www.versioneye.com/assets/language/php.png">
+                            <img width="110" height="110" src="https://www.versioneye.com/assets/language/java.png" alt="Java">
                           </td>
                           <td class="nine sub-columns last">
                             <!-- Top Right sub-grid -->
@@ -960,7 +960,7 @@ body.outlook img {
                         <tr>
                           <td class="three sub-columns">
                             <!-- Top Left sub-grid -->
-                            <img width="110" height="110" src="https://www.versioneye.com/assets/language/php.png">
+                            <img width="110" height="110" src="https://www.versioneye.com/assets/language/java.png" alt="Java">
                           </td>
                           <td class="nine sub-columns last">
                             <!-- Top Right sub-grid -->
@@ -996,7 +996,7 @@ body.outlook img {
                         <tr>
                           <td class="three sub-columns">
                             <!-- Top Left sub-grid -->
-                            <img width="110" height="110" src="https://www.versioneye.com/assets/language/clojure.png">
+                            <img width="110" height="110" src="https://www.versioneye.com/assets/language/clojure.png" alt="Clojure">
                           </td>
                           <td class="nine sub-columns last">
                             <!-- Top Right sub-grid -->
@@ -1032,7 +1032,7 @@ body.outlook img {
                         <tr>
                           <td class="three sub-columns">
                             <!-- Top Left sub-grid -->
-                            <img width="110" height="110" src="https://www.versioneye.com/assets/language/objective-c.png">
+                            <img width="110" height="110" src="https://www.versioneye.com/assets/language/objective-c.png" alt="Objective-C">
                           </td>
                           <td class="nine sub-columns last">
                             <!-- Top Right sub-grid -->
@@ -1178,19 +1178,7 @@ body.outlook img {
 
                             <h5>Connect With Us:</h5>
 
-                            <a class="tiny-button facebook" href="#">
-                              <table>
-                                <tr>
-                                  <td>
-                                    Facebook
-                                  </td>
-                                </tr>
-                              </table>
-                            </a>
-
-                            <br>
-
-                            <a class="tiny-button twitter" href="#">
+                            <a class="tiny-button twitter" href="https://twitter.com/versioneye">
                               <table>
                                 <tr>
                                   <td>
@@ -1202,7 +1190,19 @@ body.outlook img {
 
                             <br>
 
-                            <a class="tiny-button google-plus" href="#">
+                            <a class="tiny-button facebook" href="https://www.facebook.com/VersionEye">
+                              <table>
+                                <tr>
+                                  <td>
+                                    Facebook
+                                  </td>
+                                </tr>
+                              </table>
+                            </a>
+
+                            <br>
+
+                            <a class="tiny-button google-plus" href="https://plus.google.com/+Versioneye">
                               <table>
                                 <tr>
                                   <td>
