Update newsletter email

--- a/app/views/newsletter_mailer/newsletter_new_features_email.html.erb
+++ b/app/views/newsletter_mailer/newsletter_new_features_email.html.erb
@@ -53,18 +53,17 @@ Hey <%= @user.fullname %>,
 </p>
 <ul>
   <li>
-    <b>CocoaPods improvements:</b> Since we initially announced support for Cocoapods we got a lot of feedback from you. Read here the updates we did: <a href="http://versioneye.wordpress.com/2013/11/28/updates-for-cocoapods-support/">Updates for Cocoapods support</a>.<br/><br/>
+    <b>New Software License View:</b> Software licenses are one of the most important meta informations we collect at VersionEye and some of our enterprise customers need to know these for due diligence. We already had a license view, but now this view is new and improved. Read more
+    <a href="http://versioneye.wordpress.com/2013/12/17/new-software-license-view/">here</a>.<br/><br/>
   </li>
   <li>
-    <b>Multiple selection of project files:</b> Our GitHub Single Page App now displays ALL supported project files in ALL subdirectorys in ALL branches. Read more <a href="http://versioneye.wordpress.com/2013/12/03/multiple-selection-of-project-files/">here</a>.<br/><br/>
-    <img src="http://versioneye.files.wordpress.com/2013/12/screen-shot-2013-12-03-at-16-19-18.png" width="600" />
+    <b>Updated GitHub SinglePage App:</b> We updated our GitHub SinglePage app with multiple file selection, async fetching and a couple more feature. Read more <a href="http://versioneye.wordpress.com/2013/12/13/updated-github-singlepage-app/">here</a>.<br/><br/>
+    <img src="http://versioneye.files.wordpress.com/2013/12/screen-shot-2013-12-13-at-11-48-00.png" width="600" />
     <br/><br/>
   </li>
   <li>
-    <b>Enforced SSL:</b> Because of security reasons we now enforce SSL on ALL our pages.<br/><br/>
-  </li>
-  <li>
-    <b>Twitter Login:</b> We removed the login with Twitter button. It doesn't make so much sense for us and we want to focus more on GitHub.<br/><br/>
+    <b>References:</b> The references number shows how many other software libraries are referencing the current library. This number is now clickable.
+    Read more <a href="http://versioneye.wordpress.com/2013/12/13/which-packages-use-my-library/">here</a><br/><br/>
   </li>
 </ul>
 <p>
