issue #397 - ui for bitbucket integration;
set up SP app for bitbucket;
added controller to handle SP requests;
added project import for bitbucket;

--- a/app/views/layouts/_html_head.html.erb
+++ b/app/views/layouts/_html_head.html.erb
@@ -53,8 +53,10 @@
       <%= javascript_include_tag "application_payment",  :defer => false, :async => false %>
 
     <% elsif current_page?( user_projects_github_repositories_path ) %>
-
       <%= javascript_include_tag "application_github",  :defer => false, :async => false %>
+
+    <% elsif current_page?( user_projects_bitbucket_repositories_path ) %>
+      <%= javascript_include_tag "application_bitbucket",  :defer => false, :async => false %>
 
     <% elsif current_page?(version_eye_api_path) %>
 
