--- a/app/views/user/helpers/_navi.html.erb
+++ b/app/views/user/helpers/_navi.html.erb
@@ -5,6 +5,7 @@
     <li><%= link_to 'Shared with me', user_collaborations_path %></li>
     <li><%= link_to 'Add New Project', new_user_project_path %></li>
     <li><%= link_to 'Github Repositories', user_projects_github_repositories_path %></li>
+    <li><%= link_to 'Bitbucket Repositories', user_projects_bitbucket_repositories_path %></li>
     <li><hr/></li>
     <li><%= link_to 'Most used packages', :controller => 'user/packages', :action => 'popular_in_my_projects'  %> </li>
     <li><%= link_to 'Packages I follow',  :controller => 'user/packages', :action => 'i_follow' %></li>
